# cgul2

./: .gitignore  README.md  constants.py  pyproject.toml  requirements.txt
src/: auto_doc.py  constants.py  ingest.py  main.py  utils.py
src/core/: auto_doc.py  cite.py  ingest.py  main.py
tests/: test_smoke.py
